# google-adk-alpha-vantage

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  pyproject.toml
docs/: architecture.md  blog.md
scripts/: a2a_demo.py  agent_demo.py
src/a2a/: main.py
src/agent/: __init__.py  __main__.py  main.py  retry.py  ticker_resolver.py  tools.py
tests/: test_a2a_demo.py  test_agent.py  test_client.py  test_retry.py  test_tools.py
